FunctionsErrors.txt
Functions.cpp: In function 'void readEquipment(LinkedList<Equipment*>*, const char*)':
Functions.cpp:43:27: error: 'atoi' was not declared in this scope
     IT = atoi(temp.c_str());
                           ^
Functions.cpp:49:19: error: 'stoi' was not declared in this scope
     AT = stoi(temp);
                   ^
Functions.cpp:55:19: error: 'stoi' was not declared in this scope
     WT = stoi(temp);
                   ^
Functions.cpp:62:22: error: 'stoi' was not declared in this scope
     level = stoi(temp);
                      ^
Functions.cpp:73:27: error: 'stoi' was not declared in this scope
     abilityPts = stoi(temp);
                           ^
